<resources>
    <string name="app_name">CinemaLib</string>
    <string name="welcome_message">Welcome to the CinemaLib home screen!</string>
    <string name="error">Error!</string>
    <string name="reload">Reload</string>
    <string name="top_menu_settings">Settings</string>
    <string name="top_menu_about">About</string>
    <string name="top_menu_search">Search</string>
    <string name="bottom_nav_main">Main</string>
    <string name="bottom_nav_library">Library</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="movie_card_title">Title</string>
    <string name="movie_card_director_text">Director</string>
    <string name="movie_card_release_date_text">ReleaseDate</string>
    <string name="movie_card_rating_text">Rating</string>
    <string name="movie_card_rating_number">X</string>
    <string name="main_fragment_heading1">New Releases</string>
    <string name="main_fragment_heading2">Top Movies</string>
    <string name="movie_details_frag">Movie Details Fragment</string>
    <string name="settings_frag">Settings Fragment</string>
    <string name="about_app_frag">About App Fragment</string>
    <string name="moviedetails_movietitle">MovieTitle</string>
    <string name="movieDetails_moviereleaseyear">MovieReleaseYear</string>
    <string name="movieDetails_moviedirector">MovieDirector</string>
    <string name="movieDetails_rating">Rating</string>
    <string name="movieDetails_release_date">Release date: </string>
    <string name="movieDetails_trivia">Trivia</string>
    <string name="movieDetails_triviatext">TriviaText</string>
    <string name="movieDetails_budget">Budget: </string>
    <string name="movieDetails_synopsis">Overview</string>
    <string name="movieDetails_genre">Genre: </string>
    <string name="movieDetails_status">Status: </string>
    <string name="movieDetails_runtime">Runtime : </string>
    <string name="movieDetails_synopsis_text">Overview text</string>
    <string name="movieDetails_gross_worldwide">Revenue: </string>
    <string name="movieDetails_minutes"> minutes </string>
    <string name="menu_history">History</string>
    <string name="settings_adult_filter">Adult filter</string>
    <string name="notes">Notes</string>
    <string name="permission_for_reading_contacts_is_required">Permission for reading contacts is required</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_map">Map</string>
    <string name="maps_search">Search</string>
    <string name="maps_address_query">Enter_address</string>
    <string name="cast_available_in_paid_version_of_the_app">Cast available in paid version of the app</string>

</resources>