<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginStart="@dimen/movie_card_layout_margin"
    android:layout_marginEnd="@dimen/movie_card_layout_margin"
    android:layout_marginTop="@dimen/movie_card_layout_margin"
    android:layout_marginBottom="@dimen/movie_card_layout_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/history_card_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/history_movie_poster"
            android:layout_width="150dp"
            android:layout_height="@dimen/history_card_height"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/generic_movie_poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/history_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_card_title_height"
                android:layout_weight="1"
                android:textSize = "@dimen/main_fragment_heading_text_size"
                android:text="@string/movie_card_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/movie_card_release_date_text_size"
                    android:layout_weight="1"
                    android:text="@string/movie_card_release_date_text" />

                <TextView
                    android:id="@+id/history_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/movie_card_release_date_text_size"
                    android:text="@string/movieDetails_runtime" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/history_rating_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/movie_card_rating_text" />

                <TextView
                    android:id="@+id/history_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/movie_card_rating_number" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>